<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/taskTextView"
        android:layout_width="270dp"
        android:layout_height="83dp"
        android:layout_marginTop="140dp"
        android:background="@android:color/background_light"
        android:padding="16dp"
        android:text="@string/task"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.297"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="160dp"
        android:layout_height="67dp"
        android:onClick="btnStart"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.736" />

    <TextView
        android:id="@+id/correctAnswersTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correctAnswer"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="#2E7D32"
        app:layout_constraintBottom_toTopOf="@+id/percentCorrectAnswersTextView"
        app:layout_constraintEnd_toStartOf="@+id/wrongAnswersTextView"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.492" />

    <TextView
        android:id="@+id/wrongAnswersTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:text="@string/wrongAnswer"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toTopOf="@+id/percentCorrectAnswersTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.489" />

    <TextView
        android:id="@+id/percentCorrectAnswersTextView"
        android:layout_width="333dp"
        android:layout_height="26dp"
        android:text="@string/percentCorrectAnswer"
        android:textAppearance="?android:textAppearanceMedium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107" />

    <EditText
        android:id="@+id/answerEditText"
        android:layout_width="155dp"
        android:layout_height="67dp"
        android:autofillHints=""
        android:enabled="false"
        android:hint="@string/enterYourAnswer"
        android:inputType="numberSigned"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskTextView"
        app:layout_constraintVertical_bias="0.155" />

    <Button
        android:id="@+id/checkButton"
        android:layout_width="160dp"
        android:layout_height="67dp"
        android:enabled="false"
        android:onClick="btnCheck"
        android:text="@string/check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.345"
        app:layout_constraintStart_toEndOf="@+id/answerEditText"
        app:layout_constraintTop_toBottomOf="@+id/taskTextView"
        app:layout_constraintVertical_bias="0.156" />

</androidx.constraintlayout.widget.ConstraintLayout>